@@ -1,3 +1,9 @@
+2009-03-25  Petr Machata  <pmachata@redhat.com>
+
+	* dwarf-attributes.cc: New file.
+	* Makefile.am (noinst_PROGRAMS): Add it.
+	(dwarf_attributes_SOURCES, dwarf_attributes_LDADD): New variables.
+
 2009-03-25  Roland McGrath  <roland@redhat.com>
 
 	* dwarf-print.cc (print_die, process_file): Take LIMIT argument.
