@@ -1,3 +1,8 @@
+2009-03-24  Petr Machata  <pmachata@redhat.com>
+
+	* c++/dwarf (dwarf::debug_info_entry::raw_attributes):
+	Fix iteration over attributes.
+
 2009-03-24  Roland McGrath  <roland@redhat.com>
 
 	* Makefile.am (libdwpp_a_SOURCES): New variable.
